# sggw-python-project-2

./: .gitignore  README.md  alembic.ini  cwiczenia_2_3_4.py  cwiczenie_5.py  pyproject.toml
alembic/: env.py
alembic/versions/: 039da41a1758_initial_migration.py
